@@ -1,0 +1,9 @@
+package com.nhl.bootique.cli;
+
+/**
+ * @since 0.12
+ */
+public enum CliOptionValueCardinality {
+
+	NONE, REQUIRED, OPTIONAL
+}
