@@ -1,9 +1,0 @@
-package com.nhl.bootique.command;
-
-/**
- * @since 0.12
- */
-public enum CommandOptionValueCardinality {
-
-	NONE, REQUIRED, OPTIONAL
-}
